--- a/presto.css
+++ b/presto.css
@@ -47,9 +47,41 @@
     margin-bottom: 0px;
 }
 
+li a.active{
+    color: var(--sec-color)!important;
+    position: relative; 
+    transform: scale(1.2);
+    transition: 0.3s;
+}
+
+li a.active:after {
+    position: absolute;
+    height: 2px;
+    margin: 0 auto;
+    content: '';
+    left: 0;
+    right: 0;
+    background-color: var(--sec-color);
+    left: 0;
+    bottom: 3px; /* adjust this to move up and down. you may have to adjust the line height of the paragraph if you move it down a lot. */
+}
+
+a.nav-link{
+    color: var(--custom-black)!important;
+}
+
+#pSpan{
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-size: 70px!important;
+}
+
 #dotSpan{
     text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     font-size: 50px;
+}
+
+#navvy{
+    background-color:#ffb7002d;
 }
 
 #logoText, #logoText span{
