--- a/presto.css
+++ b/presto.css
@@ -4,6 +4,10 @@
     --custom-black: #000000d5;
 }
 
+a{
+    text-decoration: none;
+}
+
 .mainColor{
     color: var(--main-color)
 }
@@ -134,6 +138,7 @@ a.nav-link:hover{
     font-weight: 500;
 }
 
+
 /* Categories section */
 .categoriesCards{
     box-shadow: 2px 2px 2px var(--custom-black);
@@ -146,6 +151,18 @@ a.nav-link:hover{
     margin: 15px;
     position: relative;
     overflow: hidden;
+    transition: 0.4s;
+}
+
+.categoriesCards:hover {
+    transform: scale(1.15);
+}
+.categoriesCards .fa-circle-arrow-right{
+    transition: 0.3s;
+}
+
+.categoriesCards:hover .fa-circle-arrow-right{
+    transform: rotate(360deg);
 }
 
 .textCategories{
@@ -195,7 +212,43 @@ a.nav-link:hover{
     background-color: transparent;
     font-weight: 500;
     padding-left: 0;
+    transition: 0.4s;
 }
+
+.shopBtn:hover{
+    transform: scale(1.1);
+}
+
+
+/* New ads */
+
+.productCard{
+    border-radius: 15px;
+    overflow: hidden;
+}
+
+.productCard img{
+    transition: 0.4s;
+}
+
+.productCategory{
+    font-size: 12px;
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.productName{
+    font-size: 16px;
+    font-family: 'Ubuntu', sans-serif;
+    font-weight: 600;
+    color: var(--custom-black);
+}
+
+.productCard:hover img{
+    transform: scale(1.2);
+}
+
+
+/* Media query */
 
 @media screen and (min-width: 768px) {
     #headerRow{
