--- a/presto.css
+++ b/presto.css
@@ -25,7 +25,7 @@ a{
 }
 
 .back-sec{
-    background-color: var(--sec-color);
+    background-color: var(--sec-color)!important;
 }
 
 .navbar-toggler{
@@ -47,6 +47,11 @@ a{
     justify-content: center;
     align-items: center;
     text-align: center;
+    transition: all 0.3s;
+}
+
+.cartAndWishlist:hover{
+    transform: scale(1.2);
 }
 
 .nav-item{
@@ -132,6 +137,12 @@ a.nav-link:hover{
 
 #searchBtn{
     border-radius: 0px 20px 20px 0px;
+    transition: 0.2s;
+}
+
+
+#searchBtn:hover{
+    transform: scale(1.1);
 }
 
 #ulNav{
@@ -152,6 +163,7 @@ a.nav-link:hover{
     position: relative;
     overflow: hidden;
     transition: 0.4s;
+    border-radius: 10px;
 }
 
 .categoriesCards:hover {
@@ -225,6 +237,11 @@ a.nav-link:hover{
 .productCard{
     border-radius: 15px;
     overflow: hidden;
+    border-color: var(--sec-color);
+    border-width: 3px;
+    box-shadow: 2px 2px 10px rgb(51, 51, 51);
+    max-width: 250px;
+    padding: 0px;
 }
 
 .productCard img{
@@ -241,12 +258,112 @@ a.nav-link:hover{
     font-family: 'Ubuntu', sans-serif;
     font-weight: 600;
     color: var(--custom-black);
+    transition: all 0.3s;
 }
 
 .productCard:hover img{
     transform: scale(1.2);
 }
 
+.card-body{
+    overflow: hidden;
+}
+
+.productBtns{
+    border-radius: 50%;
+    height: 45px;
+    width: 45px;
+    border-color: var(--sec-color);
+    color: var(--sec-color);
+    border-style: solid;
+    background-color: transparent;
+    transition: all 0.3s;
+}
+
+.productBtns:hover{
+    transform: scale(1.2);
+}
+
+.productName:hover{
+    transform: scale(1.1);
+}
+
+.heartBtn{
+    transition: 0.2s;
+}
+
+/* Swiper Carousel */
+
+.swiper {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background-color: transparent;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+
+    padding: 30px;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.swiper-wrapper{
+    padding: 0px;
+}
+
+.swiper-button-next{
+    position: absolute;
+    right: 0px;
+}
+
+.swiper-button-prev{
+    position: absolute;
+    left: 0px;
+}
+
+.swiper-button-next:after{
+    font-family: "Font Awesome 5 Free"; 
+    font-weight: 900; 
+    font-size: 20px;
+    content: "\f0a9";
+    color: var(--sec-color);
+    text-shadow: 1px 1px 4px var(--custom-black);
+}
+
+.swiper-button-prev:after{
+    font-family: "Font Awesome 5 Free"; 
+    font-weight: 900; 
+    font-size: 20px;
+    content: "\f0a8";
+    color: var(--sec-color);
+    text-shadow: 1px 1px 4px var(--custom-black);
+}
+
+.swiper-pagination-bullet-active{
+    background: var(--sec-color);
+}
 
 /* Media query */
 
