--- a/presto.css
+++ b/presto.css
@@ -11,6 +11,18 @@ a{
     text-decoration: none;
 }
 
+.colorWhite{
+    color: white;
+}
+
+.back-colorRed{
+    background-color: red;
+}
+
+.back-colorGreen{
+    background-color: green;
+}
+
 .mainColor{
     color: var(--main-color)
 }
@@ -186,7 +198,7 @@ a.nav-link:hover{
 }
 
 #categoriesSectionContainerFluid{
-    background-image: url(/media/Animated\ Shape\ \(1\).svg);
+    background-image: url(/media/Animated\ Shape\ \(5\).svg);
 }
 
 .categoriesCards:hover {
@@ -277,6 +289,7 @@ a.nav-link:hover{
     box-shadow: 2px 2px 10px rgb(51, 51, 51);
     max-width: 250px;
     padding: 0px;
+    position: relative;
 }
 
 .productCard img{
@@ -304,7 +317,7 @@ a.nav-link:hover{
     overflow: hidden;
 }
 
-.productBtns{
+#heartBtn, #cartBtn{
     border-radius: 50%;
     height: 45px;
     width: 45px;
@@ -315,7 +328,7 @@ a.nav-link:hover{
     transition: all 0.3s;
 }
 
-.productBtns:hover{
+#heartBtn:hover, #cartBtn:hover{
     transform: scale(1.2);
 }
 
@@ -323,8 +336,23 @@ a.nav-link:hover{
     transform: scale(1.1);
 }
 
-.heartBtn{
-    transition: 0.2s;
+.typeBadge{
+    position: absolute;
+    top: 12px;
+    left: 12px;
+    /* width: 42px; */
+    z-index: 8000;
+    border-radius: 8px;
+}
+
+.newBadge{
+    position: absolute;
+    top: 40px;
+    left: 12px;
+    /* width: 42px; */
+    background-color: var(--sec-color);
+    z-index: 8000;
+    border-radius: 8px;
 }
 
 /* Swiper Carousel */
@@ -370,12 +398,18 @@ a.nav-link:hover{
 
 .swiper-button-next{
     position: absolute;
-    right: 0px;
+    right: 4px;
+    transition: 0.3s;
 }
 
 .swiper-button-prev{
     position: absolute;
-    left: 0px;
+    left: 2px;
+    transition: 0.3s;
+}
+
+.swiper-button-next:hover, .swiper-button-prev:hover{
+    transform: scale(1.3);
 }
 
 .swiper-button-next:after{
@@ -384,7 +418,7 @@ a.nav-link:hover{
     font-size: 20px;
     content: "\f0a9";
     color: var(--sec-color);
-    text-shadow: 1px 1px 4px var(--custom-black);
+    text-shadow: -1px 1px 4px var(--custom-black);
 }
 
 .swiper-button-prev:after{
@@ -396,15 +430,21 @@ a.nav-link:hover{
     text-shadow: 1px 1px 3px var(--custom-black);
 }
 
+.swiper-pagination{
+    position: relative;
+    bottom: 40px;
+}
+
 .swiper-pagination-bullet-active{
     background: var(--sec-color);
 }
 
+
 /* Easter Egg Toast message */
 #easterEggToastMessage{
     position: fixed;
-    top: 34px;
-    right: 150px;
+    top: 30px;
+    right: 130px;
     z-index: 9000;
 }
 
@@ -415,6 +455,13 @@ a.nav-link:hover{
 
     #navbarContainerFluid{
         z-index: 1500;
+    }
+}
+
+@media screen and (min-width: 992px){
+
+    #categoriesSectionContainerFluid{
+        background-image: url(/media/Animated\ Shape\ \(1\).svg);
     }
 }
 
