--- a/presto.css
+++ b/presto.css
@@ -608,6 +608,10 @@ a.nav-link:hover{
     margin: 30px auto;
 }
 
+.form-control{
+    border-radius: 10px;
+}
+
 .form-control:focus{
     box-shadow: none!important;
     border: 1px solid var(--sec-color)!important;
@@ -646,6 +650,61 @@ a.nav-link:hover{
 
 #formArrows{
     text-shadow: 0px 0px 5px var(--custom-black);
+}
+
+
+/* Newsletter */
+
+#newsletterContainerFluid{
+    height: 200px;
+}
+
+#newsletterH5{
+    font-weight: 400;
+}
+
+#newsletterHr{
+    opacity: 0.8;
+}
+
+#newsletterSpan{
+    font-weight: 500;
+}
+
+#newsletterInput{
+    border-radius: 30px 0px 0px 30px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: var(--sec-color);
+    height: 38px;
+}
+
+
+/* Perchè non funziona???? */
+
+    #newsletterInput:focus{
+        box-shadow: none!important;
+    }
+
+/*  */
+
+#newsletterBtn{
+    border-radius: 0px 30px 30px 0px;
+    border-style: none;
+    background-color: var(--sec-color);
+    width: 120px;
+}
+
+#newsletterDiv{
+    position: relative;
+}
+
+#bgEnvelope{
+    position: absolute;
+    z-index: -1;
+    bottom: 72px;
+    left: 3rem;
+    transform: rotate(45deg) scale(8);
 }
 
 
