--- a/presto.css
+++ b/presto.css
@@ -655,6 +655,8 @@ a.nav-link:hover{
 
 /* Newsletter */
 
+/* Centrare verticalmente, posizionare correttamente la busta, allargare l'input email*/
+
 #newsletterContainerFluid{
     height: 200px;
 }
@@ -693,6 +695,11 @@ a.nav-link:hover{
     border-style: none;
     background-color: var(--sec-color);
     width: 120px;
+    transition: 0.2s;
+}
+
+#newsletterBtn:hover{
+    transform: scale(1.1);
 }
 
 #newsletterDiv{
