--- a/ads.css
+++ b/ads.css
@@ -7,4 +7,11 @@
 #searchFilterBtn{
     border-radius: 50%;
     border: none;
+    height: 30px;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
