--- a/presto.css
+++ b/presto.css
@@ -537,6 +537,9 @@ a.nav-link:hover{
 /* Aggiungere validations di Bootstrap agli input del form */
 /* Aggiungere altra row con iscrizione alla newsletter (magari nel footer?) */
 
+textarea{
+    min-height: 100px!important;
+}
 
 #workWithUsContainerFluid{
     background-image: url(/media/Animated\ Shape\ \(7\).svg);
@@ -608,11 +611,11 @@ a.nav-link:hover{
     margin: 30px auto;
 }
 
-.form-control{
+.form-control, .form-select{
     border-radius: 10px;
 }
 
-.form-control:focus{
+.form-control:focus, .form-select:focus{
     box-shadow: none!important;
     border: 1px solid var(--sec-color)!important;
 }
@@ -819,6 +822,47 @@ ul{
     right: 130px;
     z-index: 9000;
 }
+
+
+/* TO BE TRANSFERRED TO ADS.CSS */
+
+#priceSearchRow{
+    width: 90%!important;
+}
+
+.row>* {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+#searchFiltersContainer{
+    border-radius: 15px;
+    padding: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 90%;
+    max-width: 760px;
+}
+
+#searchByNameInput, #searchByCategoryInput, #minInput, #maxInput{
+    max-height: 46px;
+    padding: 10px;
+}
+
+#searchFilterBtn{
+    border-radius: 20px;
+    border: none;
+    height: 34px;
+    padding: 5px;
+    margin: 12px auto 8px auto;
+    background-color: white;
+    transition: 0.3s;
+}
+
+#searchFilterBtn:hover{
+    transform: scale(1.1);
+}
+
 
 /* Media query */
 
