--- a/presto.css
+++ b/presto.css
@@ -274,6 +274,14 @@ a.nav-link:hover{
 
 /* Categories section */
 
+#categoriesText, #newAdsText{
+    border: 3px solid var(--sec-color);
+    border-radius: 30px;
+    padding: 6px 24px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.445);
+    background-color: white;
+}
+
 .categoriesCards{
     box-shadow: 2px 2px 2px var(--custom-black);
     height: 250px;
@@ -830,7 +838,7 @@ ul{
     width: 90%!important;
 }
 
-.row>* {
+#searchFiltersContainer .row>* {
     padding-right: 0px;
     padding-left: 0px;
 }
@@ -841,7 +849,7 @@ ul{
     margin-top: 20px;
     margin-bottom: 20px;
     width: 90%;
-    max-width: 840px;
+    max-width: 760px;
 }
 
 #searchByNameInput, #searchByCategoryInput, #minInput, #maxInput{
@@ -861,6 +869,13 @@ ul{
 
 #searchFilterBtn:hover{
     transform: scale(1.1) ;
+}
+
+#exploreAllAdsSpan{
+    border: 3px solid var(--sec-color);
+    border-radius: 30px;
+    padding: 6px 24px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.445);
 }
 
 /* Media query */
@@ -957,6 +972,10 @@ ul{
     
     #searchFilterBtnCol{
         transform: translateX(0px);
+    }
+    
+    #priceSearchRow{
+        transform: translateX(3px);
     }
 }
 
