--- a/presto.css
+++ b/presto.css
@@ -129,10 +129,6 @@ a.nav-link:hover{
     font-size: 30px;
 }
 
-#navvy{
-    background-color:#ffb7002d;
-}
-
 #logoText, #logoText span{
     font-weight: 600;
     font-size: 26px;
@@ -543,7 +539,6 @@ a.nav-link:hover{
 /* Work with us */
 
 /* Aggiungere validations di Bootstrap agli input del form */
-/* Aggiungere altra row con iscrizione alla newsletter (magari nel footer?) */
 
 textarea{
     min-height: 100px!important;
@@ -692,14 +687,9 @@ textarea{
     height: 38px;
 }
 
-
-/* Perchè non funziona???? */
-
-    #newsletterInput:focus{
-        box-shadow: none!important;
-    }
-
-/*  */
+:focus-visible {
+    outline: none;
+}
 
 #newsletterBtn{
     border-radius: 0px 30px 30px 0px;
@@ -832,7 +822,7 @@ ul{
 }
 
 
-/* TO BE TRANSFERRED TO ADS.CSS */
+/* All Ads.html */
 
 #priceSearchRow{
     width: 90%!important;
@@ -843,28 +833,33 @@ ul{
     padding-left: 0px;
 }
 
+#searchFilterCol{
+    border-radius: 50%!important;
+}
+
 #searchFiltersContainer{
-    border-radius: 15px;
-    padding: 12px;
+    border-radius: 20px;
+    padding: 22px;
     margin-top: 20px;
     margin-bottom: 20px;
     width: 90%;
-    max-width: 760px;
+    max-width: 1000px;
 }
 
-#searchByNameInput, #searchByCategoryInput, #minInput, #maxInput{
-    max-height: 46px;
-    padding: 10px;
+.form-floating>.form-select {
+    padding-top: 0px;
+    padding-bottom: 0px;
 }
 
 #searchFilterBtn{
-    border-radius: 20px;
-    border: none;
+    border-radius: 10px;
+    border: 2px solid var(--custom-black);
     height: 34px;
     padding: 5px;
     margin: 12px auto 8px auto;
     background-color: white;
     transition: 0.3s;
+    line-height: 0;
 }
 
 #searchFilterBtn:hover{
@@ -876,6 +871,13 @@ ul{
     border-radius: 30px;
     padding: 6px 24px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.445);
+}
+
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Media query */
